<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_main" android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menuHome" />
        <item android:id="@+id/nav_restaurants" android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menuRestaurants" />
        <item android:id="@+id/nav_viewonmap" android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/menuViewOnMaps" />
        <item android:id="@+id/nav_about" android:icon="@android:drawable/ic_menu_help"
            android:title="@string/menuAbout" />
    </group>

    <item android:title="Profile">
        <menu>
            <item android:id="@+id/nav_logout" android:icon="@android:drawable/presence_offline"
                android:title="@string/action_logout" />
        </menu>
    </item>

</menu>