<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cc.thiago.fiapfoodapp.view.fragments.AddRestaurantFragment">

        <TextView
            android:id="@+id/tv_add_restaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/hintRestaurant"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:layout_marginTop="15dp"
            android:id="@+id/et_restaurant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_add_restaurant"
            android:hint="@string/etRestaurantName" />

        <EditText
            android:layout_marginTop="15dp"
            android:id="@+id/et_restaurant_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/et_restaurant_name"
            android:hint="@string/hintRestaurantType" />

        <EditText
            android:layout_marginTop="15dp"
            android:id="@+id/et_restaurant_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/et_restaurant_type"
            android:hint="@string/hintDescription" />

        <EditText
            android:layout_marginTop="15dp"
            android:id="@+id/et_restaurant_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/et_restaurant_desc"
            android:hint="@string/hintAverageCost"
            android:inputType="numberDecimal"/>

        <EditText
            android:layout_marginTop="15dp"
            android:id="@+id/et_restaurant_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/et_restaurant_cost"
            android:hint="@string/hintPhone"
            android:inputType="phone"/>

        <Button
            android:id="@+id/bt_add_restaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/et_restaurant_phone"
            android:text="@string/btAddRestaurant" />

</RelativeLayout>
