<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cc.thiago.fiapfoodapp.view.activity.SiginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_user"
        android:id="@+id/tv_usuario"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_usuario"
        android:hint="@string/label_user"
        android:id="@+id/et_user"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_password"
        android:layout_below="@id/et_user"
        android:id="@+id/tv_password"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_password"
        android:hint="@string/label_password"
        android:inputType="textPassword"
        android:id="@+id/et_password"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_confirm_password"
        android:layout_below="@id/et_password"
        android:id="@+id/tv_confirm_password"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_confirm_password"
        android:hint="@string/label_confirm_password"
        android:inputType="textPassword"
        android:id="@+id/et_confirm_password"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_confirm_password"
        android:text="@string/bt_signin"
        android:id="@+id/bt_sign"/>

</RelativeLayout>
