<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/toolbar"
    android:layout_marginTop="?android:attr/actionBarSize"
    tools:context="cc.thiago.fiapfoodapp.view.fragments.EditRestaurantFragment">

    <EditText
        android:layout_marginTop="15dp"
        android:id="@+id/et_restaurant_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ivPreview"
        android:hint="@string/etRestaurantName" />

    <EditText
        android:layout_marginTop="15dp"
        android:id="@+id/et_restaurant_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_restaurant_name"
        android:hint="@string/hintRestaurantType" />

    <EditText
        android:layout_marginTop="15dp"
        android:id="@+id/et_restaurant_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_restaurant_type"
        android:hint="@string/hintDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_below="@+id/et_restaurant_desc"
        android:id="@+id/layout2Fields">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:layout_marginTop="15dp"
                android:id="@+id/et_restaurant_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:hint="@string/hintAverageCost"
                android:inputType="numberDecimal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:layout_marginTop="15dp"
                android:id="@+id/et_restaurant_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:hint="@string/hintPhone"
                android:inputType="phone"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/bt_edit_restaurant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/layout2Fields"
        android:text="@string/btEditRestaurant" />

</RelativeLayout>